modified:   index.html 	new file:   "\345\244\264\345\203\217.png" 	new file:   "\345\255\2271.png"

--- a/index.html
+++ b/index.html
@@ -1,3 +1,241 @@
-<a>
-    This is Wen_Shao's Web
-</a>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>文少的个人主页</title>
+    <style>
+        .img1 {
+            width: 60px;
+        }
+
+        li {
+            display: inline;
+        }
+
+        ul {
+
+        }
+
+        .t1 {
+            text-align: center;
+        }
+
+        .t2 {
+            text-align: left;
+            font-size: 40px;
+            color: aliceblue;
+        }
+
+        p {
+            display: inline;
+        }
+
+        a:link {
+            text-decoration: none;
+            color: white;
+        }
+
+        a:visited {
+            text-decoration: none;
+            color: white;
+        }
+
+        a:hover {
+            text-decoration: none;
+            color: white;
+        }
+
+        a:active {
+            text-decoration: none;
+            color: white;
+        }
+
+        .b1 {
+            background: linear-gradient(to bottom, rgb(100, 200, 250) 600px, #000000c7 1000px);
+        }
+
+        h1 {
+            color: whitesmoke;
+        }
+
+        h2 {
+            color: greenyellow;
+        }
+    </style>
+    <link rel="shortcut icon" href="头像.png" class="img1">
+    <a name="home"></a>
+</head>
+
+<body class="b1">
+    <div>
+        <div style="background-color: aliceblue;">
+            <ul style="float: right;left: 0;display: inline;position: fixed;width: 160;height: 60;">
+                <li style="float: left;right: 0">
+                    <img src="头像.png" class="img1" alt="图片加载失败">
+                </li>
+                <li style="float: left;right: 0;color:aliceblue;font-size: 20px">
+                    &nbsp;
+                    Wen
+                    <br>
+                    &nbsp;
+                    Shao
+                </li>
+            </ul>
+            <ul style="float: left;right: 0;display: inline;position: fixed;width: 160;height: 60;">
+                <li style="font: right;left: 0">
+                    <a href="#about">
+                        关于
+                        &nbsp;
+                        &nbsp;
+                    </a>
+                </li>
+                <li style="font: right;left: 0">
+                    <a href="#home">
+                        首页
+                        &nbsp;
+                        &nbsp;
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="t1">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>
+                ~这里是文少的个人主页~
+            </h1>
+            <h2>
+                ————
+            </h2>
+            <p style="color:dimgrey;">
+                你可以在这里找到一些和我有关的东西
+            </p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+    <div style="color: aliceblue;">
+        <a name="about"></a>
+        <div class="t1">
+            <h1>
+                关于我
+            </h1>
+            <h2>
+                ————
+            </h2>
+            <p>
+                我是一个不值一提的小学生
+                过着没日没夜的学习生活(虽然比中学生好多了...)
+            </p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>
+                作品
+            </h1>
+            <h2>
+                ————————
+            </h2>
+            <br>
+            <br>
+    <div style="color: chocolate;">
+        <ul style="list-style-type:none;">
+            <li style="display:inline;">
+                <a href = "https://WenShao233.github.io">
+                    我的网站
+                    &nbsp;
+                    &nbsp;
+                </a>
+            </li>
+            <li style="display:inline;">
+                <a href = "https://WenShao233.github.io/wiki">
+                    我的Wiki
+                    &nbsp;
+                    &nbsp;
+                </a>
+            </li>
+            <li style="display:inline;">
+                <a href = "https://WenShao233.github.io/wiki/SetJavaVersion">
+                    Java切换器
+                    &nbsp;
+                    &nbsp;
+                </a>
+            </li>
+        </ul>
+    </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
+    </div>
+</body>
+
+</html>
