modified:   index.html

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <br>
             <br>
     <div style="color: chocolate;">
-        <ul style="list-style-type:none;">
+        <ul style="list-style-type:none;color: chocolate;">
             <li style="display:inline;">
                 <a href = "https://WenShao233.github.io">
                     我的网站
