--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                 </li>
             </ul>
             <ul style="float: left;right: 0;display: inline;position: fixed;width: 160;height: 60;">
+                <li style="font: right;left: 0>
+                    <a href="https://WenShao233.github.io/wiki>
+                        Wiki
+                        &nbsp;
+                        &nbsp;
+                    </a>
                 <li style="font: right;left: 0">
                     <a href="#about">
                         关于
