modified:   index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </ul>
             <ul style="float: left;right: 0;display: inline;position: fixed;width: 160;height: 60;">
                 <li style="font: right;left: 0">
-                    <a href="https://wenshao233.github.io/wiki">
+                    <a href="https://wenshao233.github.io/Wiki">
                         Wiki
                         &nbsp;
                         &nbsp;
@@ -211,7 +211,7 @@
                 </a>
             </li>
             <li style="display:inline;">
-                <a href = "https://WenShao233.github.io/wiki">
+                <a href = "https://WenShao233.github.io/Wiki">
                     我的Wiki
                     &nbsp;
                     &nbsp;
