modified:   index.html

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 ————
             </h2>
             <p>
-                我是一个不值一提的小学生
+                我是一个不值一提的六年级小学生
                 过着没日没夜的学习生活(虽然比中学生好多了...)
             </p>
             <br>
